--- a/resources/help/index.css
+++ b/resources/help/index.css
@@ -1,44 +1,36 @@
 body {
   transform: scale(1);
-  width: 600px;
+  width: 500px;
   background: url("../common/theme/bg-01.jpg");
 }
-
 .head-box {
   margin: 60px 0 0 0;
   padding-bottom: 0;
 }
-
 .head-box .title {
   font-size: 50px;
 }
-
 .cont-box {
-  /* border-radius: 15px; */
+  border-radius: 15px;
   margin-top: 20px;
   margin-bottom: 20px;
-  margin-right: 5px;
   overflow: hidden;
-  /* box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.15); */
+  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.15);
   position: relative;
   font-size: 20px;
   background: rgba(255, 255, 255, 0.3);
   box-shadow: 0 8px 32px 0 rgba(114, 126, 253, 0.37);
-  /* 毛玻璃 */
-  backdrop-filter: blur(0px);
-  -webkit-backdrop-filter: blur(0px);
-
-  border-radius: 0px;
+  backdrop-filter: blur(1px);
+  -webkit-backdrop-filter: blur(30px);
+  border-radius: 30px;
   border: 1px solid rgba(255, 255, 255, 0.18);
   color: #209cf5;
 }
-
 .help-group {
   font-size: 20px;
   font-weight: bold;
   padding: 15px 15px 10px 20px;
 }
-
 .help-table {
   text-align: center;
   border-collapse: collapse;
@@ -49,11 +41,9 @@ body {
   width: 100%;
   color: rgb(0, 0, 0);
 }
-
 .help-table .tr {
   display: table-row;
 }
-
 .help-table .td,
 .help-table .th {
   font-size: 14px;
@@ -63,17 +53,14 @@ body {
   line-height: 24px;
   position: relative;
   text-align: left;
-  width: 33%;
+  width: 20%;
 }
-
 .help-table .tr:last-child .td {
   padding-bottom: 12px;
 }
-
 .help-table .th {
   background: rgba(34, 41, 51, 0.5);
 }
-
 .help-icon {
   width: 40px;
   height: 40px;
@@ -86,18 +73,15 @@ body {
   top: 12px;
   transform: scale(0.85);
 }
-
 .help-title {
   display: block;
   color: #3a79ef;
   font-size: 16px;
   line-height: 24px;
 }
-
 .help-desc {
   display: block;
   font-size: 13px;
   line-height: 18px;
 }
-
 /*# sourceMappingURL=index.css.map */
